--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,3 +10,10 @@
         border-bottom: 5px solid rgb(24, 160, 250);
     }
 }
+
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
